[tool.poetry]
name = "dvc-demo"
version = "0.1.0"
description = ""
authors = ["A1daAlvar3zD13z <aida.alvarez@logicmelt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
scikit-image = "^0.22.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
dvc = "^3.43.1"
dvc-gdrive = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
